TBC - 0.28.0
- [NEW] - Added ON4KST Chat Support
- [NEW] - Added Az BeamWidth and Az Offset to Antenna Profile
- Fixed Browse button should open an expecting folder (issue #241)
- Fixed Reword QSL buttons and Settings in QSO Details and Settings (issue #242)

2023/08/21 - 0.27.0
- [NEW] - Added HRDLog Support
- Fixed Text field alignment (issue #233)
- Fixed Rig/Rot Connection port type selection (issue #235)
- Fixed Incorrect Distance Value in WSJTX Widget (issue #236)
- Fixed Incorrect WSJTX locator target on the map (issue #237)

2023/07/30 - 0.26.0
- [NEW] - Added user-defined layout for New QSO widget
- [NEW] - Pressing Spacebar in Callsign field skips RST fields
- [NEW] - Added user-defined URL for web lookup (issue #230)
- Fixed WSJTX QSOs should have an Operator Name from Callbook (issue #223)
- Fixed US call area suffixes not handled correctly (issue #226 thanks Florian)
- Fixed QSO Filter Detail allows to save an empty Filter Name (issue #228)

2023/07/17 - 0.25.1
- Fixed Unexpected mode change when Setting Dialog is saved (issue #222)
- Fixed QSL_SENT field has an incorrect ADIF name (issue #225)

2023/07/04 - 0.25.0
- [NEW] - Export - Added CSV Format
- [NEW] - Export - Added Type of Export Generic/QSLs (issue #209)
- [NEW] - Export - Added Exported Columns Setting
- [NEW] - Export - All export formats use the ADIF field name convention
- [CHANGED] - Export - JSON format contains a header - JSON format change
- [CHANGED] - Default Statistics Interval is curr_date-1 and curr_day
- Fixed Errors from Secure Storage are not shown (issue #216)
- Fixed RX/TX Bands are uneditable when RX/TX freqs are missing (issue #220)

2023/06/16 - 0.24.0
- Fixed Incorrect FT4 mode-submode (issue #212)
- Fixed CONTESTIA mode should be CONTESTI (issue #213)
- Fixed Context menu deselects NewContactEditLine (issue #215)
- FIxed incorrect WSJTX Filter initialization (issue #218)

2023/06/09 - 0.23.0
- [NEW] - Added CWDaemon Keyer Support
- [NEW] - Added FLDigi Keyer Support