@@ -1,6 +1,7 @@
 TBC - 0.28.0
 - [NEW] - Added ON4KST Chat Support
 - [NEW] - Added Az BeamWidth and Az Offset to Antenna Profile
+- [NEW] - Double-Clicking the IBP callsign in the online map tunes the frequency
 - Fixed Browse button should open an expecting folder (issue #241)
 - Fixed Reword QSL buttons and Settings in QSO Details and Settings (issue #242)
 
